--- a/BookSoulsApp.Domain/BookSoulsApp.Domain.csproj
+++ b/BookSoulsApp.Domain/BookSoulsApp.Domain.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="3.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.1" />
   </ItemGroup>
 
