--- a/BookSoulsApp.Application/BookSoulsApp.Application.csproj
+++ b/BookSoulsApp.Application/BookSoulsApp.Application.csproj
@@ -11,10 +11,7 @@
 		<PackageReference Include="CloudinaryDotNet" Version="1.27.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 		<PackageReference Include="MongoDB.Driver" Version="3.4.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Models\" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
