--- a/BookSoulsApp.Application/BookSoulsApp.Application.csproj
+++ b/BookSoulsApp.Application/BookSoulsApp.Application.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 		<PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+		<PackageReference Include="payOS" Version="1.0.9" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
 	</ItemGroup>
 
